[WIP] Home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entreprise ETS LE NAOUR</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    ddddd
+    <section class="s1">
+        <header>
+            <a href="#home">
+                <div class="logo">
+                    <img src="img/logo_alpha.png" alt="logo">
+                </div>
+            </a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Demander un devis</a>
+                    </li>
+                    <li>
+                        <a href="#">Contactez-nous</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="home-info">
+                <h1>ETS Le Naour : une entreprise spécialisée dans le froid et la climatisation sur le secteur d’Agen.</h1>
+                <p>L’entreprise de climatisation ETS Le Naour est une entreprise familiale créée en 
+                    1995. Spécialiste du froid et de la climatisation, nous proposons nos services 
+                    aux particuliers et aux professionnels pour l’installation, le dépannage, l’entretien et 
+                    la maintenance d’appareils frigorifique ou de systèmes de climatisation. 
+                    ETS Le Naour s’engage à vous accompagner tout au long de votre projet, de l’installation à la 
+                    mise en service de vos appareils. Nous proposons par la suite l’entretien et le dépannage de vos 
+                    installations. Ainsi, cet engagement permet aux professionnels de ne pas être confrontés à des 
+                    conséquences trop importantes suite à une panne de matériel frigorifique et aux particuliers de 
+                    pouvoir garder un confort thermique dans leur logement à tout moment de l’année. 
+                    Que vous soyez un particulier ou un professionnel, faites confiance à ETS Le Naour pour 
+                    l’installation de climatisation à Agen.
+                </p>
+        </div>
+    </section>
+    <section class="s2">
+        <div class="all-content">
+            <div class="img-mitsubishi">
+                <img src="img/20181024_174609-min.jpg" alt="">
+            </div>
+            <div>
+                <h2>ETS Le Naour vous propose des systèmes de chauffage et climatisation de la marque Mitsubishi 
+                    Electric.</h2>
+                <p>Il s’agit de système haut de gamme d’un excellent rapport qualité / prix, idéal en tant 
+                    qu’équipement dans un logement, mais aussi pour l’application dans le secteur tertiaire. 
+                    Mitsubishi Electric présente une large gamme de produit : climatisation réversible, pompes à 
+                    chaleur air / eau et pompes à chaleur air / air, etc. Chacun des produits de la marque présente 
+                    des fonctionnalités et des technologies exclusives. 
+                    ETS Le Naour s’occupe de l’installation de votre climatisation à Agen, que vous soyez un 
+                    particulier ou un professionnel.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h3>ENTREPRISE CERTIFIÉE QUALIPAC RGE</h3>
+            <p>Notre certification QualiPAC RGE permet de garantir à nos clients la fiabilité de nos travaux, le 
+                respect des délais, mais aussi de garantir une solution adaptée aux caractéristiques techniques 
+                du projet.
+            </p>
+            <button>Savoir plus</button>
+        </div>
+        <div>
+            <h3>GARANTIE DÉCENNALE</h3>
+            <p>La garantie décennale s’applique sur les produits vendu par ETS Le Naour mais aussi sur 
+                l’installation des appareils de climatisation et matériels frigorifique. La garantie décennale est 
+                pris en compte dès réception du chantier.
+            </p>
+            <button>Savoir plus</button>
+        </div>
+        <div>
+            <h3>HABILITÉ AU FLUIDE FRIGORIFIQUE</h3>
+            <p>LETS Le Naour est titulaire de l’attestation de capacité à manipuler les fluides frigorigènes. Ainsi, 
+                en tant que manipulateur de fluides frigorigènes (utilisés notamment par les pompes à chaleur), 
+                l’équipe de ETS Le Naour s’engage à respecter strictement le code de l’environnement.
+            </p>
+            <button>Savoir plus</button>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22882.320311237218!2d0.6126983303612065!3d44.20109247887773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12abb31aff85830f%3A0x40665174815bbf0!2sAgen!5e0!3m2!1sen!2sfr!4v1631779943577!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <p>10, rue de la clim 47000 Agen.</p>
+        </div>
+        <div>
+            <div>
+                <p>Pour toute demande d’information sur votre projet, n’hésitez pas à nous contacter.</p>
+            </div>
+            <div>
+                <p>05 05 05 05 05 - contact@ets-le-naour.fr</p>
+            </div>
+            <div>
+                <button>Contactez-nous</button>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
