[ADD] home page

--- a/index.html
+++ b/index.html
@@ -30,41 +30,42 @@
             </nav>
         </header>
         <div class="home-info">
-                <h1>ETS Le Naour : une entreprise spécialisée dans le froid et la climatisation sur le secteur d’Agen.</h1>
-                <p>L’entreprise de climatisation ETS Le Naour est une entreprise familiale créée en 
-                    1995. Spécialiste du froid et de la climatisation, nous proposons nos services 
-                    aux particuliers et aux professionnels pour l’installation, le dépannage, l’entretien et 
-                    la maintenance d’appareils frigorifique ou de systèmes de climatisation. 
-                    ETS Le Naour s’engage à vous accompagner tout au long de votre projet, de l’installation à la 
-                    mise en service de vos appareils. Nous proposons par la suite l’entretien et le dépannage de vos 
-                    installations. Ainsi, cet engagement permet aux professionnels de ne pas être confrontés à des 
-                    conséquences trop importantes suite à une panne de matériel frigorifique et aux particuliers de 
-                    pouvoir garder un confort thermique dans leur logement à tout moment de l’année. 
-                    Que vous soyez un particulier ou un professionnel, faites confiance à ETS Le Naour pour 
-                    l’installation de climatisation à Agen.
-                </p>
+            <h1>ETS Le Naour : une entreprise spécialisée dans le froid et la climatisation sur le secteur d’Agen.</h1>
+            <p>L’entreprise de climatisation ETS Le Naour est une entreprise familiale créée en 
+                1995. Spécialiste du froid et de la climatisation, nous proposons nos services 
+                aux particuliers et aux professionnels pour l’installation, le dépannage, l’entretien et 
+                la maintenance d’appareils frigorifique ou de systèmes de climatisation. 
+                ETS Le Naour s’engage à vous accompagner tout au long de votre projet, de l’installation à la 
+                mise en service de vos appareils. Nous proposons par la suite l’entretien et le dépannage de vos 
+                installations. Ainsi, cet engagement permet aux professionnels de ne pas être confrontés à des 
+                conséquences trop importantes suite à une panne de matériel frigorifique et aux particuliers de 
+                pouvoir garder un confort thermique dans leur logement à tout moment de l’année. 
+                Que vous soyez un particulier ou un professionnel, faites confiance à ETS Le Naour pour 
+                l’installation de climatisation à Agen.
+            </p>
         </div>
     </section>
     <section class="s2">
-        <div class="all-content">
-            <div class="img-mitsubishi">
-                <img src="img/20181024_174609-min.jpg" alt="">
-            </div>
-            <div>
-                <h2>ETS Le Naour vous propose des systèmes de chauffage et climatisation de la marque Mitsubishi 
-                    Electric.</h2>
-                <p>Il s’agit de système haut de gamme d’un excellent rapport qualité / prix, idéal en tant 
-                    qu’équipement dans un logement, mais aussi pour l’application dans le secteur tertiaire. 
-                    Mitsubishi Electric présente une large gamme de produit : climatisation réversible, pompes à 
-                    chaleur air / eau et pompes à chaleur air / air, etc. Chacun des produits de la marque présente 
-                    des fonctionnalités et des technologies exclusives. 
-                    ETS Le Naour s’occupe de l’installation de votre climatisation à Agen, que vous soyez un 
-                    particulier ou un professionnel.
-                </p>
+        <div class="img-mitsubishi">
+            <img src="img/img-mitsubishi.jpg" alt="">
+        </div>
+        <div class="text-content">
+            <h2>ETS Le Naour vous propose des systèmes de chauffage et climatisation de la marque Mitsubishi 
+                Electric.</h2>
+            <p>Il s’agit de système haut de gamme d’un excellent rapport qualité / prix, idéal en tant 
+                qu’équipement dans un logement, mais aussi pour l’application dans le secteur tertiaire. 
+                Mitsubishi Electric présente une large gamme de produit : climatisation réversible, pompes à 
+                chaleur air / eau et pompes à chaleur air / air, etc. Chacun des produits de la marque présente 
+                des fonctionnalités et des technologies exclusives. 
+                ETS Le Naour s’occupe de l’installation de votre climatisation à Agen, que vous soyez un 
+                particulier ou un professionnel.
+            </p>
+            <div class="logo-mitsubishi">
+                <img src="img/logMitsubishi.svg" alt="">
             </div>
         </div>
     </section>
-    <section>
+    <section class="s3">
         <div>
             <h3>ENTREPRISE CERTIFIÉE QUALIPAC RGE</h3>
             <p>Notre certification QualiPAC RGE permet de garantir à nos clients la fiabilité de nos travaux, le 
@@ -95,12 +96,13 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22882.320311237218!2d0.6126983303612065!3d44.20109247887773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12abb31aff85830f%3A0x40665174815bbf0!2sAgen!5e0!3m2!1sen!2sfr!4v1631779943577!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <p>10, rue de la clim 47000 Agen.</p>
         </div>
-        <div>
+        <div class="info-contact">
             <div>
                 <p>Pour toute demande d’information sur votre projet, n’hésitez pas à nous contacter.</p>
             </div>
-            <div>
-                <p>05 05 05 05 05 - contact@ets-le-naour.fr</p>
+            <div class="links">
+                <a href="contact@ets-le-naour.fr">contact@ets-le-naour.fr</a>
+                <a href="tel:+05 05 05 05 05">05 05 05 05 05</a>
             </div>
             <div>
                 <button>Contactez-nous</button>
